[tool.poetry]
name = "arbitrum-v2-1"
version = "0.1.0"
description = ""
authors = ["Sa1tbaby <Sklitgames@gmail.com>"]
readme = "README.md"
packages = [{include = "arbitrum_v2"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["all"], version = "^0.29.0"}
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
